[package]
name = "variant-ssl-sys"
version = "0.10.0"
license = "MIT"
description = "FFI bindings to OpenSSL variants such as BoringSSL / AWS-LC / Tongsuo"
repository = "https://github.com/zh-jq/rust-variant-ssl"
readme = "README.md"
categories = ["cryptography", "external-ffi-bindings"]
links = "openssl"
build = "build/main.rs"
edition = "2018"

[features]
vendored = ["dep:openssl-src"]
tongsuo = ["dep:tongsuo-src"]
boringssl = ["dep:bssl-sys"]
aws-lc = ["dep:aws-lc-sys"]
bindgen = ["dep:bindgen", "aws-lc-sys?/bindgen"]

[dependencies]
libc = "0.2"
bssl-sys = { version = "0.1.0", optional = true }
aws-lc-sys = { version = "0.12", optional = true, features = ["ssl"] }

[build-dependencies]
bindgen = { version = "0.65.0", optional = true, features = ["experimental"] }
cc = "1.0.61"
openssl-src = { version = "300.1.2", optional = true, features = ["legacy"] }
tongsuo-src = { version = "840", optional = true }
pkg-config = "0.3.9"
vcpkg = "0.2.8"

# We don't actually use metadeps for annoying reasons but this is still here for tooling
[package.metadata.pkg-config]
openssl = "1.0.1"
