[package]
name = "tongsuo"
version = "0.10.62"
license = "Apache-2.0"
description = "OpenSSL bindings"
repository = "https://github.com/zh-jq/rust-tongsuo"
readme = "README.md"
keywords = ["crypto", "tls", "ssl", "dtls"]
categories = ["cryptography", "api-bindings"]
edition = "2018"

# these are deprecated and don't do anything anymore
[features]
v101 = []
v102 = []
v110 = []
v111 = []

vendored = ['ffi/vendored']
tongsuo = ['ffi/tongsuo']
bindgen = ['ffi/bindgen']
unstable_boringssl = ["ffi/unstable_boringssl"]
default = ["tongsuo"]

[dependencies]
bitflags = "2.2.1"
cfg-if = "1.0"
foreign-types = "0.3.1"
libc = "0.2"
once_cell = "1.5.2"

openssl-macros = { version = "0.1.0" }
ffi = { package = "tongsuo-sys", version = "0.9.98", path = "../openssl-sys" }

[dev-dependencies]
hex = "0.3"
