[package]
name = "variant-ssl"
version = "0.11.6"
license = "Apache-2.0"
description = "Bindings for OpenSSL variants such as BoringSSL / AWS-LC / Tongsuo"
repository = "https://github.com/zh-jq/rust-variant-ssl"
readme = "README.md"
keywords = ["crypto", "tls", "ssl", "dtls"]
categories = ["cryptography", "api-bindings"]
edition = "2021"

# these are deprecated and don't do anything anymore
[features]
v101 = []
v102 = []
v110 = []
v111 = []

vendored = ['ffi/vendored']
tongsuo = ['ffi/tongsuo']
bindgen = ['ffi/bindgen']
boringssl = ["ffi/boringssl"]
aws-lc = ["ffi/aws-lc"]

[dependencies]
bitflags = "2.2.1"
cfg-if = "1.0"
foreign-types = "0.3.1"
libc = "0.2"
once_cell = "1.5.2"

openssl-macros = { version = "0.1.0" }
ffi = { package = "variant-ssl-sys", version = "0.10.1", path = "../openssl-sys" }

[dev-dependencies]
hex = "0.4"
